--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -41,7 +41,7 @@
 
 
     <script src="vendor/angular.js"></script>
-
+    <script src="vendor/keypress.js"></script>
     <script src="vendor/angular-resource.js"></script>
     <script src="vendor/angular-ui-router.js"></script>
     <script src="scripts/app.js"></script>
