--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -46,6 +46,7 @@
     <script src="vendor/angular-ui-router.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/guy.js"></script>
+    <script src="scripts/engine.js"></script>
     <script src="scripts/video.js"></script>
 
 </body>
