--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -34,7 +34,7 @@
     <script src="vendor/angular-resource.js"></script>
     <script src="vendor/angular-ui-router.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="scripts/rtc.js"></script>
     <script src="scripts/guy.js"></script>
     <script src="scripts/engine.js"></script>
     <script src="scripts/video.js"></script>
